fixed the logo not showing correctly. added versioning on style.css

--- a/assets/styles/modules/_header.css
+++ b/assets/styles/modules/_header.css
@@ -4,6 +4,40 @@
 	justify-content: space-between;
 	align-items: flex-start;
 
+	&__logo-wrapper {
+
+		& > h1 {
+			font-size: 1.5rem;
+			padding-top: 0.5em;
+			padding-left: 0.5em;
+			text-transform: uppercase;
+			font-weight: 900;
+			
+			a {
+				text-decoration: none;
+				padding: 0 5px;
+				color: $whiteColor;
+				background-color: $mainColor;
+				}
+
+			@mixin atSmall {
+				font-size: 2rem;
+				padding-left: 1em;
+			}
+		}
+
+		& > p {
+			color: $accentColor;
+			padding-left: 0.5em;
+			@mixin atSmall {
+				padding-left: 1.875em;
+				
+			}
+		}
+	
+		
+	}
+
 	&__nav {
 		display: inline-flex;
 		flex-flow: row wrap;
@@ -34,38 +68,8 @@
 			display: flex;
 		}
 	}
-}
 
-.logo__wrapper {
-
-	&__tagline {
-		color: $mainColor;
-		padding-left: 0.5em;
-		@mixin atSmall {
-			padding-left: 1.875em;
-			
-		}
-	}
 	
-	&__logo {
-		font-size: 1.5rem;
-		padding-top: 0.5em;
-		padding-left: 0.5em;
-		text-transform: uppercase;
-		font-weight: 900;
-		
-		a {
-			text-decoration: none;
-			padding: 0 10px;
-			color: $whiteColor;
-			background-color: $mainColor;
-
-		}
-
-		@mixin atSmall {
-			font-size: 2rem;
-			padding-left: 1em;
-		}
-	}
 
 }
+
